# Ea_OS

./: ARCHITECTURE.md  Cargo.toml  DEEPSEEK_ledger_response_01.md  HANDOFF_v1.md  HANDOFF_v2.md  HANDOFF_v3.md  OFFICE_SUITE_AUDIT_20251224_140700.md  architectureandmore.md  codex_prompt_v1.md  deepest_ledger_response_02.md  deepseek_update_kernel.md  repo_tree_explain_DEEPSEEK.md
docs/: ea_ledger_protocol.md
ledger/: Cargo.toml
ledger/.github/workflows/: ci.yml
ledger/arda/: Cargo.toml
ledger/arda/src/: lib.rs  main.rs
ledger/benches/: benchmarks.rs
ledger/core/src/: apps.rs  brainstem.rs  lib.rs  lifecycle.rs  policy.rs
ledger/ledgerd/: Cargo.toml  local_vm.toml
ledger/ledgerd/src/: main.rs
ledger/office/: Cargo.toml
ledger/office/src/: calendar.rs  document.rs  events.rs  files.rs  lib.rs  main.rs  spreadsheet.rs
ledger/office/src/ui/: calendar.rs  editor.rs  grid.rs  mod.rs  tree.rs
ledger/spec/: Cargo.toml
ledger/spec/src/: events.rs  lib.rs  policy.rs
ledger/src/: consts.rs  lib.rs
ledger/tests/: integration.rs  ledger_end_to_end.rs  ledgerd_daemon_shared_registry.rs  ledgerd_ipc.rs  ledgerd_shared_transport.rs  ledgerd_status.rs
ledger/transport/: Cargo.toml
ledger/transport/src/: lib.rs
ledger/ui-shell/: Cargo.toml
ledger/ui-shell/src/: main.rs
muscle-compiler/: Cargo.toml
muscle-compiler/src/: crypto.rs  error.rs  main.rs  parser.rs
muscle-compiler/src/ast/: full_ast.rs  mod.rs
muscle-compiler/src/codegen/: aarch64.rs  mod.rs  nucleus.rs  x86_64.rs
muscle-compiler/src/languages/: capability_checker.rs  ea_lang.rs  formal_grammar.rs  mod.rs
muscle-ea-axonwasm/: Cargo.toml
muscle-ea-axonwasm/src/: lib.rs
muscle-ea-core/: Cargo.toml
muscle-ea-core/src/: biology.rs  error.rs  lib.rs  runtime.rs
muscle-ea-dendritewasm/: Cargo.toml
muscle-ea-dendritewasm/src/: lib.rs
muscle-ea-neurowasm/: Cargo.toml
muscle-ea-neurowasm/src/: lib.rs
muscle-ea-pathfinder/: Cargo.toml
muscle-ea-pathfinder/src/: lib.rs
muscles/: nucleus.ea
muscles/preloader/: Cargo.toml  build.rs
muscles/preloader/.cargo/: config.toml
muscles/preloader/src/: lib.rs
nucleus/: Cargo.toml  build.rs
nucleus/src/: lib.rs  main.rs
nucleus/src/integration/: attestation.rs  lattice.rs  mod.rs  symbiote.rs
nucleus/src/kernel/: capabilities.rs  mod.rs  nucleus.rs  scheduler.rs
nucleus/src/memory/: fixed_alloc.rs  mod.rs
nucleus/src/rules/: boot.rs  mod.rs  timer.rs  updates.rs
nucleus/tests/: integration_tests.rs  unit_tests.rs
patches/getrandom/src/: lib.rs
referee/: Cargo.toml  build.rs
referee/src/: crypto.rs  errors.rs  lib.rs  main.rs  muscle_loader.rs  uart.rs
referee/tests/: integration_test.rs
scripts/: build-nucleus.sh
symbiote/: Cargo.toml
symbiote/benches/: symbiote_benchmarks.rs
symbiote/src/: lib.rs  policy_engine.rs
symbiote/src/patches/: mod.rs
symbiote/tests/: integration.rs
