[workspace]
members = [
    "ledger",
    "ledger/spec",
    "ledger/core",
    "ledger/transport",
    "ledger/ledgerd",
    "ledger/arda",
    "ledger/ui-shell",
    "nucleus",
    "symbiote",
    "referee",
    "muscle-compiler",
    "muscle-ea-core",
    "muscle-ea-pathfinder",
    "muscle-ea-neurowasm",
    "muscle-ea-dendritewasm",
    "muscle-ea-axonwasm",
    "muscles/preloader"
]
resolver = "2"

[patch.crates-io]
getrandom = { path = "patches/getrandom" }

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
bytes = "1.6"
bincode = "1.3"
parking_lot = "0.12"
futures = "0.3"
derive_more = { version = "1.0" }

[workspace.package]
edition = "2021"
