[package]
name = "ea-lattice-ledger"
version = "1.0.0"
edition = "2021"
authors = ["Eä Foundation <contact@ea.foundation>"]
description = "Trustless, fixed-size, hash-only global ledger via quadratic residue lattice"
repository = "https://github.com/ea-foundation/lattice-ledger"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "ledger", "zero-trust", "muscle", "ea", "blockchain", "zk"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = []
bench = []

[dependencies]
blake3 = { version = "1.5", default-features = false, features = ["traits"] }

[dev-dependencies]
criterion = { version = "0.5" }
proptest = { version = "1.0" }
assert_cmd = "2.0"
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
ledger-spec = { path = "spec" }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bench]]
name = "lattice_benchmarks"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
overflow-checks = true
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
