[package]
name = "muscle-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Eä Foundation"]
description = "Compiler for Eä Muscles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add other dependencies as needed based on src imports

[[bin]]
name = "musclec"
path = "src/main.rs"
