[package]
name = "muscle-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Eä Foundation"]
description = "Compiler for Eä Muscles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
aes-gcm-siv = "0.11"
blake3 = "1.5"
rand = "0.8"
zeroize = "1.7"
subtle = "2.5"
nom = { version = "8.0.0", features = ["std"] }
once_cell = "1.17"
regex = "1.10"
thiserror = "1.0"
bytemuck = "1.16"
# Add other dependencies as needed based on src imports

[lib]
name = "muscle_compiler"
path = "src/lib.rs"

[[bin]]
name = "musclec"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
