[package]
name = "ledger-transport"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
ledger-core = { path = "../core" }
ledger-spec = { path = "../spec" }
bincode = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
