[package]
name = "pre-nucleus-loader"
version = "0.1.0"
description = "2KiB pre-nucleus loader - verifies and loads Nucleus Muscle"
authors = ["Eä Foundation"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "preloader"
path = "src/lib.rs"

[dependencies]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
panic = "abort"
